fix: dark mode for tabs

--- a/src/popup/Tokens/index.css
+++ b/src/popup/Tokens/index.css
@@ -205,8 +205,12 @@
     margin-left: -2px;
 }
 
-.token-card .uik-button+.uik-button {
+.token-card .uik-button {
     margin-left: 15px;
+}
+
+.uik-button {
+    margin-left: 8px !important;
 }
 
 .token-card+* {
@@ -363,6 +367,11 @@
     padding: 1.75rem 1rem;
     text-align: center;
     width: 100%;
+    color: var(--text);
+
+}
+
+.no-token-activity--dark {
     color: var(--text-light);
     background: #373840;
 }
